<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_marginTop="80dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="250dp"
        android:id="@+id/tableLayout"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/lbl_device_name"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView7"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:text="@string/dummy"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textViewDeviceName"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/lbl_device_model"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:text="@string/dummy"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textViewDeviceModel"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/lbl_address"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView6"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:text="@string/dummy"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textViewAddress"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/lbl_firmware"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:text="@string/dummy"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/textViewFirmware"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <TextView
                android:text="@string/lbl_power"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:text="@string/dummy"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/textViewPower"
                android:textSize="18sp" />
            </TableRow>


    </TableLayout>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        app:fabSize="normal"
        app:srcCompat="@android:drawable/ic_menu_rotate"
        android:id="@+id/fabRefresh" />


    <Button
        android:text="@string/send_test_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonTest"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_alignBottom="@+id/fabRefresh"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp" />

</RelativeLayout>